completed tools section and made minor fixes to spacing

--- a/cnpredesign/components/Cost.module.css
+++ b/cnpredesign/components/Cost.module.css
@@ -6,7 +6,7 @@
     justify-content: center;
     font-weight: 700;
     font-size: 60px;
-    padding: 300px 170px 0px 200px;
+    padding: 200px 170px 0px 200px;
     height: 1231px;
 }
 
