--- a/cnpredesign/components/Services.module.css
+++ b/cnpredesign/components/Services.module.css
@@ -1,5 +1,5 @@
 .services {
-    padding: 0px 64px 187.5px 64px;
+    padding: 100px 64px 187.5px 64px;
     font-weight: 700;
     font-size: 60px;
     line-height: 60px;
