--- a/cnpredesign/styles/globals.css
+++ b/cnpredesign/styles/globals.css
@@ -1,12 +1,11 @@
 html,
 body {
-  min-width: fit-content;
   padding: 0;
   margin: 0;
   font-family: 'proxima-nova';
   font-weight: 600;
   color: #000000;
-  z-index: 1;
+  overflow-x: hidden;
 }
 
 a {
@@ -19,6 +18,10 @@ a {
 }
 
 .content {
-  background-image: url("/assets/background_designs.svg");
+  background-image: url("/assets/background_designsv2.svg");
   background-size: cover;
+}
+
+.content::-webkit-scrollbar {
+  display: none;
 }
